<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoanSched</string>
    <string name="action_settings">Settings</string>
    <string name="prinLabel">Principal</string>
    <string name="prin"></string>
    <string name="rateLabel">Int. Rate</string>
    <string name="rate">4.500%</string>
    <string name="downButton">-</string>
    <string name="upButton">+</string>
    <string name="termLabel">Term</string>
    <string name="term"></string>
    <string name="mopmtLabel">Monthly Pmt</string>
    <string name="mopmt">$0.00</string>
    <string name="schedButtonTitle">Schedule</string>
    <string name="menu_returnTitle">Return to Calculator</string>
    <string name="title_activity_loan_fragment">LoanFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sched_fragment">SchedFragment</string>

</resources>
